--- a/klingelballui.ui
+++ b/klingelballui.ui
@@ -112,7 +112,7 @@ QTabBar::tab::disabled{
        <enum>QTabWidget::Rounded</enum>
       </property>
       <property name="currentIndex">
-       <number>2</number>
+       <number>4</number>
       </property>
       <property name="iconSize">
        <size>
@@ -275,7 +275,7 @@ QTabBar::tab::disabled{
              <cursorShape>BlankCursor</cursorShape>
             </property>
             <property name="focusPolicy">
-             <enum>Qt::TabFocus</enum>
+             <enum>Qt::ClickFocus</enum>
             </property>
             <property name="accessibleName">
              <string>Lautstärke %</string>
@@ -1861,7 +1861,7 @@ QRadioButton::indicator:unchecked{
         </item>
        </layout>
       </widget>
-      <widget class="QWidget" name="Profile_Tab" >
+      <widget class="QWidget" name="Profile_Tab">
        <property name="enabled">
         <bool>false</bool>
        </property>
@@ -1908,7 +1908,7 @@ QRadioButton::indicator:unchecked{
                  <x>0</x>
                  <y>0</y>
                  <width>416</width>
-                 <height>562</height>
+                 <height>560</height>
                 </rect>
                </property>
                <layout class="QGridLayout" name="gridLayout_2">
@@ -2281,6 +2281,40 @@ QPushButton::checked{
            </size>
           </property>
          </spacer>
+        </item>
+        <item>
+         <widget class="QLabel" name="ErrormessageLabel">
+          <property name="styleSheet">
+           <string notr="true">QLabel{
+	background: white;
+	color:  red;
+	border-radius: 3px;
+}</string>
+          </property>
+          <property name="text">
+           <string/>
+          </property>
+          <property name="textFormat">
+           <enum>Qt::AutoText</enum>
+          </property>
+          <property name="alignment">
+           <set>Qt::AlignCenter</set>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QLabel" name="ErrormessageLabelSecline">
+          <property name="styleSheet">
+           <string notr="true">QLabel{
+	background: white;
+	color:  red;
+	border-radius: 3px;
+}</string>
+          </property>
+          <property name="text">
+           <string/>
+          </property>
+         </widget>
         </item>
         <item>
          <widget class="QPushButton" name="Uebtragen3">
