--- a/klingelballui.ui
+++ b/klingelballui.ui
@@ -1907,8 +1907,8 @@ QRadioButton::indicator:unchecked{
                 <rect>
                  <x>0</x>
                  <y>0</y>
-                 <width>428</width>
-                 <height>586</height>
+                 <width>416</width>
+                 <height>560</height>
                 </rect>
                </property>
                <layout class="QGridLayout" name="gridLayout_2">
@@ -2364,6 +2364,18 @@ QPushButton::checked{
         </property>
         <item>
          <widget class="QLabel" name="Aussehen_label">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="sizeIncrement">
+           <size>
+            <width>0</width>
+            <height>0</height>
+           </size>
+          </property>
           <property name="font">
            <font>
             <pointsize>28</pointsize>
@@ -2373,11 +2385,23 @@ QPushButton::checked{
           <property name="accessibleName">
            <string>Aussehen Überschrift</string>
           </property>
+          <property name="styleSheet">
+           <string notr="true"/>
+          </property>
+          <property name="frameShape">
+           <enum>QFrame::NoFrame</enum>
+          </property>
           <property name="text">
            <string>Aussehen:</string>
           </property>
+          <property name="wordWrap">
+           <bool>false</bool>
+          </property>
+          <property name="indent">
+           <number>-1</number>
+          </property>
           <property name="buddy">
-           <cstring>Lightmode_checkBox</cstring>
+           <cstring></cstring>
           </property>
          </widget>
         </item>
@@ -2436,6 +2460,11 @@ QPushButton::checked{
           <property name="focusPolicy">
            <enum>Qt::NoFocus</enum>
           </property>
+          <property name="styleSheet">
+           <string notr="true">QTextBrowser{
+	background-color: white;
+}</string>
+          </property>
           <property name="html">
            <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
 &lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;meta charset=&quot;utf-8&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
@@ -2443,7 +2472,7 @@ p, li { white-space: pre-wrap; }
 hr { height: 1px; border-width: 0; }
 li.unchecked::marker { content: &quot;\2610&quot;; }
 li.checked::marker { content: &quot;\2612&quot;; }
-&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Segoe UI'; font-size:9pt; font-weight:400; font-style:normal;&quot;&gt;
+&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'.AppleSystemUIFont'; font-size:13pt; font-weight:400; font-style:normal;&quot;&gt;
 &lt;p style=&quot; margin-top:37px; margin-bottom:37px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px; background-color:transparent;&quot;&gt;&lt;a name=&quot;WACViewPanel_ClipboardElement&quot;&gt;&lt;/a&gt;&lt;span style=&quot; font-family:'Times New Roman','Times New Roman_EmbeddedFont','Times New Roman_MSFontService','serif'; font-size:18pt; font-weight:700; color:#000000;&quot;&gt;E&lt;/span&gt;&lt;span style=&quot; font-family:'Times New Roman','Times New Roman_EmbeddedFont','Times New Roman_MSFontService','serif'; font-size:18pt; font-weight:700; color:#000000;&quot;&gt;rklärung zur Barrierefreiheit&lt;/span&gt;&lt;span style=&quot; font-family:'Times New Roman','Times New Roman_EmbeddedFont','Times New Roman_MSFontService','serif'; font-size:18pt; color:#000000;&quot;&gt; &lt;/span&gt;&lt;/p&gt;
 &lt;p style=&quot; margin-top:37px; margin-bottom:37px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px; background-color:transparent;&quot;&gt;&lt;span style=&quot; font-family:'Times New Roman','Times New Roman_EmbeddedFont','Times New Roman_MSFontService','serif'; font-size:12pt; color:#000000;&quot;&gt;Die Universität Wien ist bemüht, ihre mobile Anwendung im Einklang mit dem Bundesgesetz über den barrierefreien Zugang zu Websites und mobilen Anwendungen des Bundes (Web-Zugänglichkeits-Gesetz – WZG) BGBl. I. Nr. 59/2019 idgF, barrierefrei zugänglich zu machen. &lt;/span&gt;&lt;/p&gt;
 &lt;p style=&quot; margin-top:37px; margin-bottom:37px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px; background-color:transparent;&quot;&gt;&lt;span style=&quot; font-family:'Times New Roman','Times New Roman_EmbeddedFont','Times New Roman_MSFontService','serif'; font-size:12pt; color:#000000;&quot;&gt;Diese Erklärung zur Barrierefreiheit gilt für die mobile Anwendung &lt;/span&gt;&lt;span style=&quot; font-family:'Times New Roman','Times New Roman_EmbeddedFont','Times New Roman_MSFontService','serif'; font-size:12pt; color:#000000; background-color:transparent;&quot;&gt;Klingelball.&lt;/span&gt;&lt;span style=&quot; font-family:'Times New Roman','Times New Roman_EmbeddedFont','Times New Roman_MSFontService','serif'; font-size:12pt; color:#000000;&quot;&gt; &lt;/span&gt;&lt;/p&gt;
