--- a/klingelballui.ui
+++ b/klingelballui.ui
@@ -112,7 +112,7 @@ QTabBar::tab::disabled{
        <enum>QTabWidget::Rounded</enum>
       </property>
       <property name="currentIndex">
-       <number>0</number>
+       <number>1</number>
       </property>
       <property name="iconSize">
        <size>
@@ -1373,11 +1373,10 @@ QTabBar::tab::disabled{
          </widget>
         </item>
         <item>
-         <widget class="QGroupBox" name="groupBox">
+         <widget class="QGroupBox" name="StillstehendColorSelectionGroupBox">
           <property name="styleSheet">
            <string notr="true">QGroupBox{
-	background-color: transparent
-;
+	background-color: transparent;
 
 }</string>
           </property>
@@ -1399,22 +1398,6 @@ QTabBar::tab::disabled{
            </property>
            <item>
             <layout class="QGridLayout" name="gridLayout_6">
-             <item row="0" column="0" colspan="3">
-              <widget class="QLabel" name="Stillstehend_Farbe_label">
-               <property name="font">
-                <font>
-                 <pointsize>16</pointsize>
-                 <bold>true</bold>
-                </font>
-               </property>
-               <property name="accessibleName">
-                <string>Stillstehend Farbauswahl Überschrift</string>
-               </property>
-               <property name="text">
-                <string>Stillstehend:</string>
-               </property>
-              </widget>
-             </item>
              <item row="1" column="0">
               <widget class="QRadioButton" name="Stillstehend_Farbe1">
                <property name="accessibleName">
@@ -1428,21 +1411,20 @@ QTabBar::tab::disabled{
 	margin-left: 10px;
 	margin-right: 10px;
 }
-
 QRadioButton::indicator{
 	background-color: white;
 	width: 40px;
 	height: 40px;
-	border: 2px solid #868686;
+	border: none;
 	border-radius: 20px;
 }
-
 QRadioButton::indicator:checked{
         border: 4px solid black;
 }
 
 QRadioButton::indicator:unchecked{
         border: 2px solid #868686;
+
 }
 
 </string>
@@ -1509,7 +1491,7 @@ QRadioButton::indicator:unchecked{
 }
 
 QRadioButton::indicator{
-	background-color: green;
+	background-color: rgb(0, 255, 0);
 	width: 40px;
 	height: 40px;
 	border: none;
@@ -1607,13 +1589,37 @@ QRadioButton::indicator:unchecked{
                </property>
               </widget>
              </item>
+             <item row="0" column="0" colspan="5">
+              <widget class="QLabel" name="Stillstehend_Farbe_label">
+               <property name="font">
+                <font>
+                 <pointsize>16</pointsize>
+                 <bold>true</bold>
+                </font>
+               </property>
+               <property name="accessibleName">
+                <string>Stillstehend Farbauswahl Überschrift</string>
+               </property>
+               <property name="styleSheet">
+                <string notr="true">QLabel{background: rgb(0, 0, 0);
+margin-top: 5px;
+margin-left: 5px;
+margin-right: 5px;
+border-radius: 6px;
+}</string>
+               </property>
+               <property name="text">
+                <string>Stillstehend:</string>
+               </property>
+              </widget>
+             </item>
             </layout>
            </item>
           </layout>
          </widget>
         </item>
         <item>
-         <widget class="QGroupBox" name="groupBox_2">
+         <widget class="QGroupBox" name="BewegendColorSelectionGroupBox">
           <property name="styleSheet">
            <string notr="true">QGroupBox{
 	background-color: transparent;
@@ -1743,7 +1749,7 @@ QRadioButton::indicator:unchecked{
 }
 
 QRadioButton::indicator{
-	background-color: green;
+	background-color: rgb(0, 255, 0);
 	width: 40px;
 	height: 40px;
 	border: none;
